--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -23,10 +23,26 @@ limitations under the License.
   <title>Commerce</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
+  <!--  Essential META Tags -->
+ <meta property="og:description" content="A Local Business">
+ <meta property="og:image" content="https://raw.githubusercontent.com/toprobusiness/toprobusiness.github.io/master/assets/img/TOPRO.png" />
+ <meta property="og:url" content="https://topro.business/">
 
+
+<!--  Non-Essential, But Required for Analytics -->
+
+  <meta property="fb:app_id" content="2221440871419426" />
+  <meta name="twitter:site" content="@topro_updates">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="shortcut icon" href="assets/favicon-16x16.png" type="image/x-icon">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
 
+      
+      
+      
 
   <style amp-boilerplate="">body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate="">body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
