--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -73,8 +73,8 @@ limitations under the License.
        "classes": "col-3",
        "items": [{
          "link": {
-           "url": "mailto:contact@lune.com",
-           "text": "—contact@lune.com",
+           "url": "mailto:support@topro.business",
+           "text": "Contact Support",
            "classes": "xs-small sm-hide h6 bold"
          }
        }]
