--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -20,7 +20,7 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Commerce</title>
+  <title>Topro</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
