--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -36,7 +36,7 @@ limitations under the License.
   <meta property="fb:app_id" content="2221440871419426" />
   <meta name="twitter:site" content="@topro_updates">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="shortcut icon" href="assets/favicon-16x16.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/toprobusiness/toprobusiness.github.io/master/assets/favicon-16x16.png" type="image/x-icon">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
 
