--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -205,7 +205,7 @@ limitations under the License.
           <h2 class="commerce-footer-header h7 pb2">About us</h2>
           <ul class="list-reset pb3 md-mx0">
               <li>
-                <a class="text-decoration-none" href="#">Size Guide</a>
+                <a class="text-decoration-none" href="#">Our Background</a>
               </li>
               <li>
                 <a class="text-decoration-none" href="#">Returns Policy</a>
@@ -223,10 +223,10 @@ limitations under the License.
                 <a class="text-decoration-none" href="tel:+440000000000">+44(0)000 000 0000</a>
               </li>
               <li>
-                <a class="text-decoration-none" href="mailto:info@BS-LDN">info@BS-LDN</a>
+                <a class="text-decoration-none" href="mailto:support@topro.business">info@topro</a>
               </li>
               <li>
-                <a class="text-decoration-none" href="#">Find a Store</a>
+                <a class="text-decoration-none" href="#">Join Us</a>
               </li>
           </ul>
         <hr class="md-hide lg-hide col-12 mx0">
