--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -147,7 +147,7 @@ limitations under the License.
     <div class="commerce-hero-align md-mx-auto">
       <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">The Essentials</h2>
       <p class="commerce-hero-content-body">These are the key frames, clothing and accessories every rider needs.</p>
-        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">shop</div>
+        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">Get Updates</div>
     </div>
   </div>
   </a>
