--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -160,9 +160,9 @@ limitations under the License.
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
-      <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">Lost Highways</h2>
+      <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">We're building</h2>
       <p class="commerce-hero-content-body">Go the distance and discover new levels of endurance along the way. Explore the world’s 10 toughest randonnées.</p>
-        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">read</div>
+        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">Get Updates</div>
     </div>
   </div>
   </a>
@@ -175,28 +175,14 @@ limitations under the License.
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-secondary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
-      <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">Sprocket Set 3 Series</h2>
+      <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">We're Building</h2>
       <p class="commerce-hero-content-body">The steel-framed complete bike that combines peerless performance with timeless style.</p>
-        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">shop</div>
+        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">Get Updates</div>
     </div>
   </div>
   </a>
 </section>
-<section class="commerce-hero-content-wrapper center overflow-hidden">
-  <a href="blog-listing.amp.html" class="text-decoration-none block">
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/narrow-landing-04.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
-<div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/wide-landing-04.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
-<div placeholder="" class="commerce-loader"></div>      </amp-img>
-  <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
-    <div class="commerce-hero-align md-mx-auto">
-      <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">No Sleep &#39;til Brooklyn</h2>
-      <p class="commerce-hero-content-body">Early mornings, black coffee, carbs. We spend a week on the road with New York&#39;s Five Borough Cycle Club.</p>
-        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">read</div>
-    </div>
-  </div>
-  </a>
-</section>
+
   </main>
 <footer class="commerce-footer center">
   <nav class="mx-auto md-mb0 md-pt5 md-pb5">
