--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -23,6 +23,17 @@ limitations under the License.
   <title>Topro</title>
   <link rel="canonical" href="https://www.ampstart.com/templates/e-commerce/landing.amp">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+      <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "NewsArticle",
+        "headline": "Source . Negotiate . Trade . Sell",
+        "datePublished": "2018-7-07T12:02:41Z",
+        "image": [
+          "logo.jpg"
+        ]
+      }
+    </script>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <!--  Essential META Tags -->
@@ -36,7 +47,7 @@ limitations under the License.
   <meta property="fb:app_id" content="2221440871419426" />
   <meta name="twitter:site" content="@topro_updates">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/toprobusiness/toprobusiness.github.io/master/assets/favicon-16x16.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/toprobusiness/toprobusiness.github.io/master/assets/favicon-16x16.png" type="image/x-icon">    
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
 
