--- a/templates/landing.amp.html
+++ b/templates/landing.amp.html
@@ -37,7 +37,7 @@ limitations under the License.
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <!--  Essential META Tags -->
- <meta property="og:description" content="A Local Business">
+ <meta name="description" content="Source . Negotiate . Trade . Sell">
  <meta property="og:image" content="https://raw.githubusercontent.com/toprobusiness/toprobusiness.github.io/master/assets/img/TOPRO.png" />
  <meta property="og:url" content="https://topro.business/">
 
